:sparkles: feat: Adicionando validações nos requests antes de salvar no banco e ajustes no Swagger
